# kuest-maker

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  trading.py  update_markets.py  update_stats.py
data_updater/: find_markets.py  trading_utils.py
kuest_data/: data_processing.py  data_utils.py  global_state.py  kuest_client.py  trading_utils.py  utils.py  websocket_handlers.py
kuest_merger/: README.md  merge.js  package.json
kuest_stats/: account_stats.py
kuest_utils/: postgres_utils.py
migrations/: 0001_init.sql
scripts/: migrate.py
