[project]
name = "kuest-maker"
version = "0.1.0"
description = "A market making bot for Kuest prediction markets"
readme = "README.md"
requires-python = ">=3.9.10"
license = { text = "MIT" }

dependencies = [
    "py-clob-client @ git+https://github.com/kuestcom/py-clob-client@main",
    "python-dotenv==1.2.1",
    "pandas==2.3.3",
    "sortedcontainers==2.4.0",
    "eth-account==0.13.7",
    "eth-utils==5.3.1",
    "kuest_eip712_structs @ git+https://github.com/kuestcom/py-eip712-structs@main",
    "py_order_utils @ git+https://github.com/kuestcom/python-order-utils@main",
    "requests==2.32.5",
    "websockets==15.0.1",
    "cryptography==46.0.3",
    "psycopg[binary]==3.2.9",
    "web3==7.14.0",
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "pytest==8.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["kuest_data", "kuest_stats", "kuest_utils", "data_updater"]

[tool.black]
line-length = 100
target-version = ["py39"]
